# air

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: release.yml
archlinux/: PKGBUILD
src/: chatgpt.rs  config.rs  displayer.rs  error.rs  history.rs  ichat.rs  llama.rs  logs.rs  main.rs  openai.rs  options.rs  path.rs  scan.rs  setup.rs
