[package]
name = "air"
version = "0.5.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
llama_cpp_rs = "0.3.0"
serde = { version = "1.0.193", features = ["derive", "rc", "alloc"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.109"
getopts = "0.2.21"
termimad = "0.26.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0.1", features = [] }
async-trait = "0.1.75"
log = "0.4.20"
env_logger = "0.10.1"
reqwest = { version = "0.11.23", features = ["json"] }
