# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "air"
version = "0.6.10"
authors = ["Alexandre Del Bigio"]
edition = "2021"
repository = "https://github.com/alescdb/air.git"
description = "A simple ChatGPT & Llama-cpp command line with ansi markdown display"
readme = "README.md"
license = "Apache-2.0"
keywords = ["chatgpt", "openai", "llama-cpp"]
categories = ["command-line-utilities"]
publish = false

[profile.release]
strip = true

[dependencies]
llama_cpp_rs = "0.3.0"
serde = { version = "1.0.195", features = ["derive", "rc", "alloc"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.111"
getopts = "0.2.21"
termimad = "0.28.1"
chrono = { version = "0.4.31", features = ["serde"] }
dirs = { version = "5.0.1", features = [] }
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.0"
reqwest = { version = "0.11.23", features = ["json"] }
libc = "0.2.152"
regex = "1.10.3"
