# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "air"
version = "0.6.12"
authors = ["Alexandre Del Bigio"]
edition = "2021"
repository = "https://github.com/alescdb/air.git"
description = "A simple ChatGPT & Llama-cpp command line with ansi markdown display"
readme = "README.md"
license = "Apache-2.0"
keywords = ["chatgpt", "openai", "llama-cpp"]
categories = ["command-line-utilities"]
publish = false
build = "build.rs"

[profile.release]
strip = true

[features]
default = []
cuda = ["llama_cpp_rs/cuda"]

[dependencies]
llama_cpp_rs = "0.3.0"
serde = { version = "1.0.196", features = ["derive", "rc", "alloc"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"
getopts = "0.2.21"
termimad = "0.29.0"
chrono = { version = "0.4.33", features = ["serde"] }
dirs = { version = "5.0.1", features = [] }
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.1"
reqwest = { version = "0.11.24", features = ["json","stream"] }
libc = "0.2.153"
regex = "1.10.3"
pulldown-cmark = "0.10.0"
termcolor = "1.4.1"
tokio-stream = "0.1.14"
